--- a/more.html
+++ b/more.html
@@ -6,17 +6,20 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <script src="https://kit.fontawesome.com/322542892c.js" crossorigin="anonymous"></script>
         <title>Chats | Kakao Clone</title>
+        <link rel= "stylesheet" href="css/styles.css"
     </head>
     <body>
         <div class="status-bar">
-            <div class="status-bar__column"></div>
+            <div class="status-bar__column">
                 <span class="status-bar__clock">13:56</span>
+            </div>
+            <div class="status-bar__column">
                 <i class="fas fa-clock"></i>
                 <i class="fas fa-voulme-mute"></i>
                 <i class="fas fa-wifi"></i>
                 <i class="fas fa-battery-full"></i>
-                <span class="status-bar__clock__battery-level">100%</span>
-            <div class="status-bar__column"></div>
+                <span class="status-bar__battery-level">100%</span>
+            </div>
         </div>
     <header class = "header">
         <div class="header__header-colums">
@@ -38,9 +41,9 @@
     </header>
     <main class="more">
         <heaeder class="more__header">
-            <div class="friends__friend friend">
-                <div class="friends__column">
-                    <img src="images/avatar.jpg"class="g-avatar">
+            <div class="friend__friend friend">
+                <div class="friend__column">
+                    <img src="images/avatar.jpg"class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             jinwook song
@@ -51,7 +54,7 @@
                     </div>
                 </div>
 
-                <div class="friends__column">
+                <div class="friend__column">
                     <i class="fas fa-fa-comment-alt fa-2x"></i>
                 </div>
             </div>
