--- a/find.html
+++ b/find.html
@@ -6,17 +6,20 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <script src="https://kit.fontawesome.com/322542892c.js" crossorigin="anonymous"></script>
         <title>Chats | Kakao Clone</title>
+        <link rel= "stylesheet" href="css/styles.css"
     </head>
     <body>
         <div class="status-bar">
-            <div class="status-bar__column"></div>
+            <div class="status-bar__column">
                 <span class="status-bar__clock">13:56</span>
+            </div>
+            <div class="status-bar__column">
                 <i class="fas fa-clock"></i>
                 <i class="fas fa-voulme-mute"></i>
                 <i class="fas fa-wifi"></i>
                 <i class="fas fa-battery-full"></i>
-                <span class="status-bar__clock__battery-level">100%</span>
-            <div class="status-bar__column"></div>
+                <span class="status-bar__battery-level">100%</span>
+            </div>
         </div>
     <header class = "header">
         <div class="header__header-colums">
@@ -70,16 +73,16 @@
             <h5 class="find__title">
                 Recommended Friends
             </h5>
-            <li class="friends__friend friend">
-                <div class="friends__column">
-                    <img src="images/avatar.jpg"class="g-avatar">
+            <li class="friend__friend friend">
+                <div class="friend__column">
+                    <img src="images/avatar.jpg"class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             jinwook song
                         </span>
                     </div>
                 </div>
-                <div class="friends__column">
+                <div class="friend__column">
                     <div class="friend__add-btn">
                         <i class="fas fa-user-plus fa-2x"></i>
                     </div>
