--- a/settings.html
+++ b/settings.html
@@ -6,23 +6,26 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <script src="https://kit.fontawesome.com/322542892c.js" crossorigin="anonymous"></script>
         <title>Settings | Kakao Clone</title>
+        <link rel= "stylesheet" href="css/styles.css"
     </head>
     <body>
         <div class="status-bar">
-            <div class="status-bar__column"></div>
+            <div class="status-bar__column">
                 <span class="status-bar__clock">13:56</span>
+            </div>
+            <div class="status-bar__column">
                 <i class="fas fa-clock"></i>
                 <i class="fas fa-voulme-mute"></i>
                 <i class="fas fa-wifi"></i>
                 <i class="fas fa-battery-full"></i>
-                <span class="status-bar__clock__battery-level">100%</span>
-            <div class="status-bar__column"></div>
+                <span class="status-bar__battery-level">100%</span>
+            </div>
         </div>
     <header class = "header">
-        <a href="more.html" class="headder__back-btn">
-                <i class="fas fa-arrow-left fa-2x"></i>
-        </a>
         <div class="header__header-colums">
+            <a href="more.html" class="header__back-btn">
+                    <i class="fas fa-arrow-left"></i>
+            </a>
             <h1 class = "header__title">Settings</h1>
         </div>
         <div class="header__header-colums">
