--- a/find.html
+++ b/find.html
@@ -35,15 +35,15 @@
         </div>
     </header>
     <main class="find">
-        <header class="find">
+        <header class="find__header">
             <ul class="find__header-list">
-                <li class="find__header-btn hedaer-btn">
+                <li class="find__header-btn header-btn">
                     <span class="header-btn__icon">
                         <i class="fas fa-qrcode fa-2x"></i>
                     </span>       
                     <span class="header-btn__title">QR Code</span>
                 </li>
-                <li class="find__header-btn hedaer-btn">
+                <li class="find__header-btn header-btn">
                     <span class="header-btn__icon">
                         <i class="fas fa-user-plus fa-2x"></i>
                     </span>       
@@ -51,7 +51,7 @@
                         Add by Contacts
                     </span>
                 </li>
-                <li class="find__header-btn hedaer-btn">
+                <li class="find__header-btn header-btn">
                     <span class="header-btn__icon">
                         <i class="fas fa-passport fa-2x"></i>
                     </span>       
@@ -59,7 +59,7 @@
                         Add by Id
                     </span>
                 </li>
-                <li class="find__header-btn hedaer-btn">
+                <li class="find__header-btn header-btn">
                     <span class="header-btn__icon">
                         <i class="far fa-envelope fa-2x"></i>
                     </span>       
@@ -97,7 +97,7 @@
                 <a href="friends.html" class="nav__list-link">
                     <i class="far fa-user"></i>
                 </a>
-        </li>
+            </li>
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link">
                     <i class="far fa-comment"></i>
