--- a/friends.html
+++ b/friends.html
@@ -34,9 +34,9 @@
             </span>
         </div>
     </header>
-    <main class="friend">
-        <header class="frined__header">
-            <div class="friend__friend  friend friend--lg">
+    <main class="friends">
+        <header class="frineds__header">
+            <div class="friends__friend  friend">
                 <div class="friend__column">
                     <img src="images/avatar.jpg"class="g-avatar friend__avatar">
                     <div class="friend__content">
@@ -51,9 +51,9 @@
                
             </div>
         </header>
-        <div class="friend__plus">
-            <h5 class="frined__plus-title">Plus friend</h5>
-            <div class="friend__friend friend">
+        <div class="friends__plus">
+            <h5 class="friends__title">Plus friend</h5>
+            <div class="friends__friend friend">
                 <div class="friend__column">
                     <img src="images/avatar.jpg"class="friend__avatar">
                     <div class="friend__content">
@@ -64,9 +64,9 @@
                 </div>
             </div>
         </div>
-        <ul class="friend__list">
-            <h4 class="friend__title friend friend--lg">Friends 14</h4>
-            <li class="friend__friend friend">
+        <ul class="friends__list">
+            <h4 class="friends__title friend friend--lg">Friends 14</h4>
+            <li class="friends__friend friend">
                 <div class="friend__column">
                     <img src="images/avatar.jpg"class="friend__avatar">
                     <div class="friend__content">
