--- a/more.html
+++ b/more.html
@@ -63,7 +63,7 @@
                     <span class="more__btn-icon">
                         <i class="far fa-smile fa-2x"></i>
                     </span>
-                    <span class="more__brtn-title">
+                    <span class="more__btn-title">
                         Emoticons
                     </span>
                 </li>
@@ -71,7 +71,7 @@
                     <span class="more__btn-icon">
                         <i class="fas fa-brush fa-2x"></i>
                     </span>
-                    <span class="more__brtn-title">
+                    <span class="more__btn-title">
                         Themse
                     </span>
                 </li>
@@ -79,7 +79,7 @@
                     <span class="more__btn-icon">
                         <i class="fab fa-kickstarter-k fa-2x"></i>
                     </span>
-                    <span class="more__brtn-title">
+                    <span class="more__btn-title">
                         TheAccount
                     </span>
                 </li>
@@ -97,14 +97,17 @@
                     </span>
                 </li>
                 <li class="more__suggestion suggestion">
+                    <span class="suggestion__icon">
                     <i class="fas fa-beer fa-2x"></i>
-
+                    </span>
                     <span class="suggestion__title">
                         Kakao Friends
                     </span>
                 </li>
                 <li class="more__suggestion suggestion">
+                    <span class="suggestion__icon">
                     <i class="fas fa-gamepad fa-2x"></i>
+                    </span>
                     <span class="suggestion__title">
                         Kakao Gem
                     </span>
