--- a/chat.html
+++ b/chat.html
@@ -10,35 +10,38 @@
     </head>
 
     <body class="chats-body">
-        <div class="status-bar">
-            <div class="status-bar__column">
-                <span class="status-bar__clock">13:56</span>
+        <div class="header-wrapper">
+                
+            <div class="status-bar">
+                <div class="status-bar__column">
+                    <span class="status-bar__clock">13:56</span>
+                </div>
+                <div class="status-bar__column">
+                    <i class="fas fa-clock"></i>
+                    <i class="fas fa-voulme-mute"></i>
+                    <i class="fas fa-wifi"></i>
+                    <i class="fas fa-battery-full"></i>
+                    <span class="status-bar__battery-level">100%</span>
+                </div>
             </div>
-            <div class="status-bar__column">
-                <i class="fas fa-clock"></i>
-                <i class="fas fa-voulme-mute"></i>
-                <i class="fas fa-wifi"></i>
-                <i class="fas fa-battery-full"></i>
-                <span class="status-bar__battery-level">100%</span>
+        <header class = "header">
+            <div class="header__header-colums">
+                <a href="index.html" class="header__back-btn">
+                    <i class="fas fa-arrow-left"></i>
+                </a>
+                <h1 class = "header__title">Best Freind</h1>
             </div>
-        </div>
-    <header class = "header">
-        <div class="header__header-colums">
-            <a href="index.html" class="header__back-btn">
-                <i class="fas fa-arrow-left"></i>
-            </a>
-            <h1 class = "header__title">Best Freind</h1>
-        </div>
-        <div class="header__header-colums">
-            <span class="header__icon">
-                <i class="fas fa-search"></i>
-            </span>
-            <span class="header__icon">
-                <i class="fas fa-bars"></i>
-            </span>
-        </div>
-    </header>
+            <div class="header__header-colums">
+                <span class="header__icon">
+                    <i class="fas fa-search"></i>
+                </span>
+                <span class="header__icon">
+                    <i class="fas fa-bars"></i>
+                </span>
+            </div>
+        </header>
 
+    </div>
     <main class="chat-screen">
         <ul class="chat__messages">
             <span class="chat__timestamp">
@@ -102,15 +105,15 @@
         </ul>
     </main>
 
-    <div class="chat__write">
-        <div class="chat__write-column">
+    <div class="chat__write--container">
+        <input type="text" placeholder="Send message" class="chat__write chat__write-input">
+        
+        <div class="chat__icon-left chat__icon">
             <i class="far fa-plus-square"></i>
 
         </div>
-        <div class="chat__write-column">
-            <input type="text" placehlder="Send message"class="chat__write-input">
-        </div>
-        <div class="chat__write-column">
+
+        <div class="chat__icon-right chat__icon">
             <span class="chat__write-icon">
                 <i class="far fa-smile-wink"></i>
             </span>
@@ -118,6 +121,11 @@
                 <i class="fas fa-microphone"></i>
             </span>
         </div>
+    </div>
+    <div class="bigScreen">
+        <span class="bigScreen__text">
+            Please make your screen small.
+        </span>
     </div>
     </body>
 </html>
