--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
             </li>
         </ul>
     </nav>
+
+    <div class="bigScreen">
+        <span class="bigScreen__text">
+            Please make your screen small.
+        </span>
+    </div>
         
     </body>
 </html>
